--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Tasky</string>
+
+    <string name="login_welcome_message">Welcome Back!</string>
+    <string name="email_address_preview">Email address</string>
+    <string name="password_preview">Password</string>
 </resources>
