-added setupCurrentDateSelectedTextView to AgendaFragment.kt -added setupAgendaItemListRecyclerView and gave functionality to sort the dates in order to AgendaFragment.kt -added showDatePickerFragment to AgendaFragment.kt -changed isClickable to is inEnabled -refactored datePickerFragment and timePickerFragment to dialogs folder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,9 @@
     <string name="delete">Delete</string>
 
     <string name="logout">Logout</string>
+
+    <!--currentDateTextView days on agenda screen -->
+    <string name="today">Today</string>
+    <string name="tomorrow">Tomorrow</string>
+    <string name="yesterday">Yesterday</string>
 </resources>
