-Cleans some code based on recommendations -Adds delete function for attendee -Adds attendee data class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,8 @@
     <string name="tomorrow">Tomorrow</string>
     <string name="yesterday">Yesterday</string>
 
+    <!--error messages -->
+    <string name="error_invalid_password_format">Password must contain at least %1$d characters,
+        one number, one uppercase, and one lowercase letter</string>
+
 </resources>
