-Added add attendee dialog -Added KTLINT plugin -Updated miniCalendar on agenda screen to use a recyclerView -Updated edit screen to look more like mockup -Updated agenda screen to look more like mockup -Added save state handle to event fragment -Put code into fragment_reminder_detail.xml and fragment_task_detail.xml -Added unit test for StringToInitials.kt (StringToInitialsTest.kt) -AGENDA NAVIGATIONS FROM AGENDA SCREEN DO NOT WORK CORRECTLY AS I AM STILL MIGRATING FROM ONE AGENDA DETAIL SCREEN TO THREE SEPARATE ONES

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,8 +61,11 @@
     <string name="tomorrow">Tomorrow</string>
     <string name="yesterday">Yesterday</string>
 
+    <!--Add attendee dialog box -->
+    <string name="add_visitor">Add visitor</string>
+    <string name="add">Add</string>
+
     <!--error messages -->
     <string name="error_invalid_password_format">Password must contain at least %1$d characters,
         one number, one uppercase, and one lowercase letter</string>
-
 </resources>
