-Starting to build api connectivity for authentication -Made multiple date types interface

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,6 @@
     <!--error messages -->
     <string name="error_invalid_password_format">Password must contain at least %1$d characters,
         one number, one uppercase, and one lowercase letter</string>
+    <string name="unauthorized">Unauthorized</string>
+    <string name="unknown_error">Unknown Error</string>
 </resources>
