-Changes getAgendaItems from AgendaRepositoryImpl.kt to use emitAll -Adds event update request -Changes api.create to use .createFormData in EventRepositoryImpl.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
     <string name="unauthorized">Unauthorized</string>
     <string name="unknown_error">Unknown Error, try connecting to internet</string>
     <string name="token_not_found">Token not found</string>
+    <string name="username_and_password_do_not_match">Username and Password do not match</string>
 
     <!--logout messages -->
     <string name="logout_successful">Logout successful</string>
