--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <string name="username_and_password_do_not_match">Username and Password do not match</string>
     <string name="attendee_already_added">Attendee already added</string>
     <string name="user_not_found">User not found</string>
+    <string name="please_check_your_internet_connection">"Please check your network connection"</string>
 
     <!--logout messages -->
     <string name="logout_successful">Logout successful</string>
